# cgt-tools

./: .dir-locals.el  .gitignore  CITATION.cff  Cargo.toml  Makefile  README.md  flake.nix  version-bump.sh
.github/workflows/: build.yml  py.yml  site.yml
cgt/: drawing.rs  genetic_algorithm.rs  graph.rs  grid.rs  has.rs  lib.rs  macros.rs  misere.rs  nom_utils.rs  numeric.rs  parsing.rs  total.rs
cgt-cli/: .gitignore  Cargo.toml  README.md  main.rs
cgt-cli/src/: amazons.rs  anyhow_utils.rs  canonical_form.rs  domineering.rs  io.rs  main.rs  quicksort.rs  snort.rs  subtraction_modulo.rs  wind_up.rs
cgt-cli/src/canonical_form/: sum.rs
cgt-cli/src/domineering/: common.rs  evaluate.rs  genetic.rs  latex.rs  search.rs
cgt-cli/src/snort/: common.rs  genetic.rs  graph.rs  latex.rs  three_caterpillar.rs  three_star.rs
cgt-derive/: Cargo.toml
cgt-derive/src/: tile.rs
cgt-py/: Cargo.toml  Makefile
cgt-py-adapter/: Cargo.toml  README.md  cgt.py  example.py
cgt-py-adapter/src/: anyhow_utils.rs  main.rs
cgt-py/src/: canonical_form.rs  domineering.rs  dyadic_rational_number.rs  lib.rs  nimber.rs  rational.rs  ski_jumps.rs  thermograph.rs  toads_and_frogs.rs
cgt-website/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
cgt-website/src/: domineering.rs  main.rs  mouse.rs  snort.rs  utils.rs
cgt/drawing/: imgui.rs  svg.rs  tiny_skia.rs
cgt/graph/: adjacency_matrix.rs  directed.rs  layout.rs  resolving_set.rs  undirected.rs
cgt/graph/adjacency_matrix/: directed.rs  undirected.rs
cgt/grid/: small_bit_grid.rs  vec_grid.rs
cgt/loopy/: impartial.rs
cgt/loopy/impartial/: vertex.rs
cgt/loopy/impartial/games/: wind_up.rs
cgt/misere/: left_dead_end.rs  p_free.rs  quelhas.rs
cgt/misere/left_dead_end/: interned.rs
cgt/numeric/: dyadic_rational_number.rs  nimber.rs  rational.rs  v2f.rs
cgt/short/: partizan.rs
cgt/short/impartial/: games.rs  impartial_game.rs
cgt/short/impartial/games/: pseudo_quicksort.rs  quicksort.rs  subtraction.rs
cgt/short/partizan/: canonical_form.rs  games.rs  partizan_game.rs  thermograph.rs  trajectory.rs  transposition_table.rs
cgt/short/partizan/canonical_form/: nus.rs
cgt/short/partizan/games/: amazons.rs  digraph_placement.rs  domineering.rs  fission.rs  konane.rs  ski_jumps.rs  snort.rs  toads_and_frogs.rs  toppling_dominoes.rs
cgt_cli/: Cargo.toml  README.md
cgt_cli/src/: amazons.rs  anyhow_utils.rs  canonical_form.rs  clap_utils.rs  commands.rs  domineering.rs  evaluate.rs  io.rs  main.rs  quicksort.rs  wind_up.rs
cgt_cli/src/commands/: amazons.rs  canonical_form.rs  domineering.rs  left_dead_ends.rs  misere.rs  p_free.rs  snort.rs  wind_up.rs
cgt_cli/src/commands/amazons/: evaluate.rs
cgt_cli/src/commands/canonical_form/: evaluate.rs  sum.rs
cgt_cli/src/commands/domineering/: common.rs  evaluate.rs  exhaustive_search.rs  genetic_search.rs  latex_table.rs
cgt_cli/src/commands/left_dead_ends/: analyze.rs  common.rs  evaluate.rs  factorizations.rs
cgt_cli/src/commands/misere/: left_dead_end.rs
cgt_cli/src/commands/p_free/: distinguish.rs  frob.rs  outcome_table.rs
cgt_cli/src/commands/quicksort/: range.rs
cgt_cli/src/commands/ski_jumps/: evaluate.rs
cgt_cli/src/commands/snort/: common.rs  genetic.rs  graph.rs  latex.rs  three_caterpillar.rs
cgt_cli/src/commands/wind_up/: range.rs
cgt_cli/src/domineering/: evaluate.rs  exhaustive_search.rs  genetic.rs  genetic_search.rs  latex.rs
cgt_cli/src/snort/: latex.rs  three_caterpillar.rs
cgt_derive/: Cargo.toml  README.md
cgt_derive/src/: lib.rs  tile.rs
cgt_gui/: Cargo.toml  README.md
cgt_gui/src/: access_tracker.rs  imgui_sdl2_boilerplate.rs  main.rs  text_rectangle_bounds.rs  widgets.rs
cgt_gui/src/widgets/: amazons.rs  canonical_form.rs  digraph_placement.rs  domineering.rs  fission.rs  graph_editor.rs  konane.rs  quelhas.rs  resolving_set.rs  ski_jumps.rs  snort.rs  toads_and_frogs.rs
cgt_py/: Cargo.toml  README.md  pyproject.toml
cgt_py/src/: canonical_form.rs  dyadic_rational_number.rs  lib.rs  rational.rs  short_partizan.rs  thermograph.rs
nix/: cargo-publish.nix  cargo-setup-hook.sh  github-pages.nix
src/: canonical_game.rs  canonical_short_game.rs  display.rs  domineering.rs  drawing.rs  dyadic_rational_number.rs  game.rs  genetic_algorithm.rs  graph.rs  grid.rs  lib.rs  loopy.rs  macros.rs  main.rs  nimber.rs  nom_utils.rs  numeric.rs  quicksort.rs  rational.rs  rw_hash_map.rs  short.rs  short_canonical_game.rs  snort.rs  thermograph.rs  to_from_file.rs  trajectory.rs  transposition_table.rs
src/drawing/: svg.rs
src/graph/: directed.rs  undirected.rs
src/grid/: small_bit_grid.rs  vec_grid.rs
src/loopy/: impartial.rs
src/loopy/impartial/: games.rs  vertex.rs
src/loopy/impartial/games/: subtraction_modulo.rs  wind_up.rs
src/numeric/: dyadic_rational_number.rs  nimber.rs  rational.rs
src/short/: impartial.rs  partizan.rs
src/short/impartial/: games.rs
src/short/impartial/games/: pseudo_quicksort.rs  quicksort.rs  quicksort_halfs.rs  subtraction.rs
src/short/partizan/: canonical_form.rs  games.rs  partizan_game.rs  short_canonical_game.rs  thermograph.rs  trajectory.rs  transposition_table.rs
src/short/partizan/games/: amazons.rs  domineering.rs  fission.rs  ski_jumps.rs  snort.rs  toads_and_frogs.rs
tests/: domineering_bench.rs
website/: CNAME  index.html
