[package]
name = "cgt"
version = "0.6.0"
edition = "2021"
authors = ["Tomasz Maciosowski <t4ccer@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/t4ccer/cgt-tools"
description = "Combinatorial Game Theory framework"
homepage = "https://github.com/t4ccer/cgt-tools"
keywords = ["cgt"]
categories = ["mathematics", "science"]
documentation = "https://docs.rs/cgt"

[dependencies]
ahash = "0.8"
append-only-vec = "0.1"
auto_ops = "0.3"
nom = "7.1"
num-rational = { version = "0.4", default-features = false, features = ["std"]}
serde = { version = "1.0", optional = true, features = ["derive"]}
serde_repr = { version = "0.1", optional = true}
cgt_derive = { version = "0.6.0", path = "./cgt_derive"}
rayon = {version = "1.10", optional = true}
dashmap = { version = "6.1", features = ["inline"] }
rand = "0.8"
mint = "0.5"

[dev-dependencies]
quickcheck = { version = "1.0", default-features = false }

[features]
default = []
serde = ["dep:serde", "dep:serde_repr", "num-rational/serde"]
rayon = ["dep:rayon"]

[lib]
path = "./cgt/lib.rs"

[workspace]
members = ["cgt_cli", "cgt_py", "cgt_derive", "cgt_gui"]
exclude = ["vendor"]

[profile.release]
lto = true
panic = "abort"
