[package]
name = "cgt"
version = "0.8.0"
edition = "2024"
authors = ["Tomasz Maciosowski <t4ccer@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/t4ccer/cgt-tools"
description = "Combinatorial Game Theory framework"
homepage = "https://github.com/t4ccer/cgt-tools"
keywords = ["cgt"]
categories = ["mathematics", "science"]
documentation = "https://docs.rs/cgt"
rust-version = "1.88"

[lints]
workspace = true

[dependencies]
cgt_derive = { version = "0.8.0", path = "./cgt_derive"}
ahash = "0.8"
append-only-vec = "0.1"
auto_ops = "0.3"
num-rational = { version = "0.4", default-features = false, features = ["std"]}
rand = "0.9"
itertools = "0.14"
dashmap = { version = "6.1", features = ["inline"] }
serde = { version = "1.0", optional = true, features = ["derive"]}
serde_repr = { version = "0.1", optional = true}
rayon = {version = "1.10", optional = true}
mint = {version = "0.5", optional = true}
tiny-skia = {version = "0.11.4", optional = true}
imgui = { version = "0.12.0", optional = true, default-features = false }

[dev-dependencies]
quickcheck = { version = "1.0", default-features = false }

[features]
default = []
serde = ["dep:serde", "dep:serde_repr", "num-rational/serde"]
rayon = ["dep:rayon"]
tiny_skia = ["dep:tiny-skia"]
imgui = ["dep:imgui"]
mint = ["dep:mint"]

[lib]
path = "./cgt/lib.rs"

[workspace]
members = ["cgt_cli", "cgt_py", "cgt_derive", "cgt_gui"]
exclude = ["vendor"]

[profile.release]
lto = true
panic = "abort"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
new_without_default = "allow"
similar_names = "allow"
must_use_candidate = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
module_name_repetitions = "allow"
uninlined_format_args = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
needless_update = "allow"
cast_precision_loss = "allow"
missing_panics_doc = "allow"
use_self = "allow"
inline_always = "allow"
too_many_arguments = "allow"
fn_params_excessive_bools = "allow"
single_match_else = "allow"
too_long_first_doc_paragraph = "allow"
should_panic_without_expect = "allow"
multiple_crate_versions = "allow"
