[package]
name = "cgt-cli"
version = "0.1.0"
edition = "2021"
authors = ["Tomasz Maciosowski <t4ccer@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/t4ccer/cgt-rs"
description = "Library to work with Combinatorial Games"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
cgt = { path = "../." }
rayon = "1.7.0"

[[bin]]
name = "cgt-cli"
path = "main.rs"