[package]
name = "cgt-py-adapter"
version = "0.1.0"
edition = "2021"
authors = ["Tomasz Maciosowski <t4ccer@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/t4ccer/cgt-rs"
description = "Library to work with Combinatorial Games"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
cgt = { path = "../.", features = ["serde"]}
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

[[bin]]
name = "cgt-py-adapter"
