[package]
name = "cgt-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cgt_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20"
cgt = { path = "../.", features = ["serde"] }
serde = { version = "<=1.0.171", features = ["derive"] }
serde_json = "1.0.97"