[package]
name = "cgt-website"
version = "0.2.0"
edition = "2021"
authors = ["Tomasz Maciosowski <t4ccer@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/t4ccer/cgt-rs"
description = "Library to work with Combinatorial Games"

[dependencies]
cgt = { path = "../." }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
js-sys = "0.3.64"
log = "0.4.18"
sycamore = {version = "0.8.2", features = ["suspense"]}
sycamore-router = "0.8.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["SvgsvgElement"] }
viz-js = "3.1.0"