[package]
name = "cgt_cli"
version = "0.5.1"
edition = "2021"
authors = ["Tomasz Maciosowski <t4ccer@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/t4ccer/cgt-tools"
description = "Combinatorial Game Theory framework"
homepage = "https://github.com/t4ccer/cgt-tools"
keywords = ["cgt"]
categories = ["mathematics", "science"]

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.4.11", features = ["derive"] }
cgt = { path = "../.", features = ["serde", "rayon"] }
rayon = "1.7.0"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
serde = { version = "1.0.172", features = ["derive"] }
serde_json = "1.0.97"
rand = "0.8.5"
itertools = "0.10.5"
nom = "7.1.3"

[target.'cfg(all(not(windows)))'.dependencies]
jemallocator = "0.5.4"

[[bin]]
name = "cgt-cli"
path = "src/main.rs"