[package]
name = "cgt_cli"
version = "0.8.0"
edition = "2024"
authors = ["Tomasz Maciosowski <t4ccer@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/t4ccer/cgt-tools"
description = "Combinatorial Game Theory framework"
homepage = "https://github.com/t4ccer/cgt-tools"
keywords = ["cgt"]
categories = ["mathematics", "science"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
cgt = { path = "../.", features = ["serde", "rayon", "tiny_skia", "quickcheck"] }
rayon = "1.10"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
itertools = "0.13"
quickcheck = { version = "1.0", default-features = false }

[target.'cfg(all(not(windows)))'.dependencies]
jemallocator = "0.5.4"

[[bin]]
name = "cgt-cli"
path = "src/main.rs"