[package]
name = "cgt_derive"
version = "0.4.0"
edition = "2021"
authors = ["Tomasz Maciosowski <t4ccer@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/t4ccer/cgt-rs"
description = "Derive macros for cgt package"
categories = ["mathematics", "science"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = {version = "2.0.39"}
