[package]
name = "cgt_derive"
version = "0.6.0"
edition = "2021"
authors = ["Tomasz Maciosowski <t4ccer@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/t4ccer/cgt-tools"
description = "Derive macros for `cgt` package"
homepage = "https://github.com/t4ccer/cgt-tools"
keywords = ["cgt"]
categories = ["mathematics", "science"]
documentation = "https://docs.rs/cgt_derive"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"
