[package]
name = "cgt_gui"
version = "0.5.1"
edition = "2021"

[dependencies]
cgt = { path = "../.", version = "0.5.1" }
imgui = { version = "0.12.0", features = ["docking", "tables-api"] }
glow = "0.13.1"
glutin = "0.31.1"
glutin-winit = "0.4.2"
imgui-glow-renderer = "0.12.0"
imgui-glium-renderer = "0.12.0"
imgui-sdl2-support = "0.12.0"
glium = { version = "0.34.0", default-features = false, features = ["glutin_backend"] }
raw-window-handle = "0.5.0"
winit = { version = "0.29.3", features = ["rwh_05"] }
sdl2 = "0.34.5"

[[bin]]
name = "cgt-gui"
path = "src/main.rs"