[package]
name = "cgt_py"
version = "0.9.0"
edition = "2024"
authors = ["Tomasz Maciosowski <t4ccer@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/t4ccer/cgt-tools"
description = "Python bindings for Rust `cgt` package"
homepage = "https://github.com/t4ccer/cgt-tools"
keywords = ["cgt"]
categories = ["mathematics", "science"]

[lib]
name = "cgt_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25"
cgt = { path = "../." }